# jobhunt

./: LICENSE  main.py  pyproject.toml  sonar-project.properties
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ruff.yml  sonarqube.yml
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 143d22cd0229_initial_schema.py  bfcba2c6f6a6_add_hashed_password_to_user_model.py
backend/app/: config.py  database.py  main.py  utils.py
backend/app/models/: __init__.py  junctions.py  models.py
backend/app/routes/: applications.py  auth.py  companies.py  contacts.py  stages.py
backend/app/schemas/: application.py  auth.py  company.py  contacts.py  stages.py
backend/app/services/: auth.py
backend/tests/: conftest.py  test_applications.py  test_auth.py  test_companies.py  test_contacts.py  test_stages.py
